--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next/mdx": "^16.1.1",
+    "gray-matter": "^4.0.3",
+    "lucide-react": "^0.562.0",
+    "framer-motion": "^11.0.0",
     "next": "16.1.1",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "next-mdx-remote": "^4.4.1",
+    "rehype-highlight": "^7.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
