--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@next/mdx": "^16.1.1",
+    "framer-motion": "^11.0.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.562.0",
-    "framer-motion": "^11.0.0",
     "next": "16.1.1",
+    "next-mdx-remote": "^4.4.1",
+    "next-themes": "^0.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "next-mdx-remote": "^4.4.1",
-    "rehype-highlight": "^7.0.2"
+    "react-icons": "^5.5.0",
+    "rehype-highlight": "^7.0.2",
+    "resend": "^6.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
